--- a/Jiyoung/1124/EPO+MVO.ipynb
+++ b/Jiyoung/1124/EPO+MVO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install empyrical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +448,7 @@
        "[1371 rows x 485 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,8 +550,7 @@
     "    obj = cp.Minimize(cp.quad_form(weights, corr_mat)) # 목적식 설정\n",
     "    \n",
     "    # 가중치 합 = 1, weights >= 0, min weight ~ max weight 범위 제약\n",
-    "    const = [cp.sum(weights) == 1, weights >= 0, ((1/num_assets))/2 <= weights, weights <= 2*(1/num_assets)] # 제약식 설정, 공매도 원하면 위에 주석 가져다 옆으로 복붙하면됨\n",
-    "    \n",
+    "    const = [cp.sum(weights) == 1, weights >= 0, ((1/num_assets))/2 <= weights, weights <= 2*(1/num_assets)] # 제약식 설정\n",
     "    problem = cp.Problem(obj, const) # 문제 정의\n",
     "    problem.solve(verbose=False, solver=cp.CPLEX) # 문제 풀기\n",
     "    \n",
@@ -560,14 +568,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 374.92it/s]"
+      "100%|██████████| 15/15 [00:00<00:00, 404.56it/s]"
      ]
     },
     {
@@ -644,7 +652,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 428.48it/s]"
+      "100%|██████████| 30/30 [00:00<00:00, 404.95it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -747,20 +762,7 @@
       "MCD    0.122637  0.083418  0.094835  0.127429  0.148021  1.000000  0.096815  \n",
       "INTC   0.102213  0.085475  0.147253  0.117701  0.129995  0.096815  1.000000  \n",
       "\n",
-      "[30 rows x 30 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[30 rows x 30 columns]\n",
       "Optimal\n"
      ]
     },
@@ -768,7 +770,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 45/45 [00:00<00:00, 428.47it/s]"
+      "100%|██████████| 45/45 [00:00<00:00, 453.51it/s]"
      ]
     },
     {
@@ -942,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,35 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 416.58it/s]\n",
-      "  0%|          | 0/30 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 441.08it/s]\n",
-      "100%|██████████| 45/45 [00:00<00:00, 459.08it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "cum_15 = cum_ret_gmv_epo(stocks_15, gmv_epo_15, '2018-05-01', '2023-04-30')\n",
-    "cum_30 = cum_ret_gmv_epo(stocks_30, gmv_epo_30, '2018-05-01', '2023-04-30')\n",
-    "cum_45 = cum_ret_gmv_epo(stocks_45, gmv_epo_45, '2018-05-01', '2023-04-30')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1049,9 +1023,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 416.58it/s]\n",
-      "100%|██████████| 30/30 [00:00<00:00, 454.44it/s]\n",
-      "100%|██████████| 45/45 [00:00<00:00, 454.44it/s]\n"
+      "100%|██████████| 15/15 [00:00<00:00, 426.72it/s]\n",
+      "100%|██████████| 30/30 [00:00<00:00, 452.45it/s]\n",
+      "100%|██████████| 45/45 [00:00<00:00, 457.78it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cum_15 = cum_ret_gmv_epo(stocks_15, gmv_epo_15, '2018-05-01', '2023-04-30')\n",
+    "cum_30 = cum_ret_gmv_epo(stocks_30, gmv_epo_30, '2018-05-01', '2023-04-30')\n",
+    "cum_45 = cum_ret_gmv_epo(stocks_45, gmv_epo_45, '2018-05-01', '2023-04-30')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/15 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 439.60it/s]\n",
+      "100%|██████████| 30/30 [00:00<00:00, 453.00it/s]\n",
+      "100%|██████████| 45/45 [00:00<00:00, 457.41it/s]\n"
      ]
     }
    ],
@@ -1063,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1103,22 +1105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 833.13it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 908.87it/s]\n",
-      "100%|██████████| 45/45 [00:00<00:00, 882.15it/s]\n"
+      "100%|██████████| 15/15 [00:00<00:00, 789.31it/s]\n",
+      "100%|██████████| 30/30 [00:00<00:00, 907.65it/s]\n",
+      "100%|██████████| 45/45 [00:00<00:00, 935.24it/s]\n"
      ]
     }
    ],
@@ -1130,22 +1126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 833.15it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 856.97it/s]\n",
-      "100%|██████████| 45/45 [00:00<00:00, 882.15it/s]\n"
+      "100%|██████████| 15/15 [00:00<00:00, 830.06it/s]\n",
+      "100%|██████████| 30/30 [00:00<00:00, 932.87it/s]\n",
+      "100%|██████████| 45/45 [00:00<00:00, 898.07it/s]\n"
      ]
     }
    ],
@@ -1157,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1220,8 @@
     "    # print('w_opt:', w_opt)\n",
     "    w_clean = ef.clean_weights()\n",
     "    # print('w_clean',w_clean.values())\n",
-    "    ef.portfolio_performance(verbose=True) \n",
+    "    ef.portfolio_performance(verbose=True)\n",
+    "\n",
     "    # print(w_clean) # 가중치 확인\n",
     "    max_weight_asset = max(w_clean, key=w_clean.get)\n",
     "    max_weight_value = w_clean[max_weight_asset]\n",
@@ -1244,21 +1235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 394.65it/s]"
+      "  0%|          | 0/15 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "100%|██████████| 15/15 [00:00<00:00, 403.08it/s]\n"
      ]
     },
     {
@@ -1277,7 +1268,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 405.32it/s]\n"
+      "100%|██████████| 30/30 [00:00<00:00, 432.76it/s]\n"
      ]
     },
     {
@@ -1296,7 +1287,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 45/45 [00:00<00:00, 257.08it/s]\n"
+      "100%|██████████| 45/45 [00:00<00:00, 439.39it/s]\n"
      ]
     },
     {
@@ -1320,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1349,14 +1340,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 312.43it/s]\n"
+      "  0%|          | 0/15 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 340.27it/s]\n"
      ]
     },
     {
@@ -1375,28 +1373,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 441.08it/s]"
+      "100%|██████████| 30/30 [00:00<00:00, 452.65it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Expected annual return: 17.7%"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "Expected annual return: 17.7%\n",
       "Annual volatility: 13.0%\n",
       "Sharpe Ratio: 1.21\n",
       "\n",
@@ -1408,7 +1392,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 45/45 [00:00<00:00, 463.81it/s]"
+      "\n",
+      "100%|██████████| 45/45 [00:00<00:00, 452.97it/s]"
      ]
     },
     {
@@ -1439,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,16 +1476,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 428.48it/s]\n",
-      "100%|██████████| 30/30 [00:00<00:00, 447.67it/s]\n",
-      "100%|██████████| 45/45 [00:00<00:00, 459.08it/s]\n"
+      "  0%|          | 0/15 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 142.46it/s]\n",
+      "100%|██████████| 30/30 [00:00<00:00, 459.35it/s]\n",
+      "100%|██████████| 45/45 [00:00<00:00, 448.04it/s]\n"
      ]
     }
    ],
@@ -1513,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1551,16 +1543,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 789.32it/s]\n",
-      "100%|██████████| 30/30 [00:00<00:00, 908.89it/s]\n",
-      "100%|██████████| 45/45 [00:00<00:00, 848.87it/s]\n"
+      "100%|██████████| 15/15 [00:00<00:00, 833.20it/s]\n",
+      "100%|██████████| 30/30 [00:00<00:00, 878.50it/s]\n",
+      "100%|██████████| 45/45 [00:00<00:00, 815.70it/s]\n"
      ]
     }
    ],
@@ -1573,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1611,10 +1603,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import empyrical\n",
+    "\n",
     "def max_return_epo(dict):\n",
     "    df = downloads(dict, \"2018-05-01\", \"2023-04-30\")\n",
     "\n",
@@ -1643,6 +1637,7 @@
     "    w_clean = ef.clean_weights()\n",
     "    print()\n",
     "    ef.portfolio_performance(verbose=True) \n",
+    "    \n",
     "    # print(w_clean) # 가중치 확인\n",
     "    max_weight_asset = max(w_clean, key=w_clean.get)\n",
     "    max_weight_value = w_clean[max_weight_asset]\n",
@@ -1656,14 +1651,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 348.76it/s]\n"
+      "  0%|          | 0/15 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 325.40it/s]\n"
      ]
     },
     {
@@ -1683,7 +1685,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 370.28it/s]\n"
+      "100%|██████████| 30/30 [00:00<00:00, 453.38it/s]\n"
      ]
     },
     {
@@ -1703,7 +1705,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 45/45 [00:00<00:00, 284.74it/s]\n"
+      "100%|██████████| 45/45 [00:00<00:00, 452.73it/s]\n"
      ]
     },
     {
@@ -1728,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1757,21 +1759,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 428.50it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 15/15 [00:00<00:00, 439.64it/s]\n"
      ]
     },
     {
@@ -1791,14 +1786,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 434.68it/s]"
+      "100%|██████████| 30/30 [00:00<00:00, 446.21it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Expected annual return: 18.2%\n",
       "Annual volatility: 39.2%\n",
       "Sharpe Ratio: 0.41\n",
@@ -1811,8 +1819,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "100%|██████████| 45/45 [00:00<00:00, 424.43it/s]\n"
+      "100%|██████████| 45/45 [00:00<00:00, 452.42it/s]"
      ]
     },
     {
@@ -1827,6 +1834,13 @@
       "가장 큰 가중치를 가진 자산: AAPL\n",
       "가장 큰 가중치: 0.04444\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -1837,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1866,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,16 +1902,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 428.47it/s]\n",
-      "100%|██████████| 30/30 [00:00<00:00, 379.66it/s]\n",
-      "100%|██████████| 45/45 [00:00<00:00, 445.44it/s]\n"
+      "  0%|          | 0/15 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:00<00:00, 356.59it/s]\n",
+      "100%|██████████| 30/30 [00:00<00:00, 453.29it/s]\n",
+      "100%|██████████| 45/45 [00:00<00:00, 457.27it/s]\n"
      ]
     }
    ],
@@ -1910,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1948,22 +1969,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 833.15it/s]\n"
+      "  0%|          | 0/15 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:00<00:00, 882.17it/s]\n",
-      "100%|██████████| 45/45 [00:00<00:00, 899.80it/s]\n"
+      "100%|██████████| 15/15 [00:00<00:00, 827.12it/s]\n",
+      "100%|██████████| 30/30 [00:00<00:00, 932.90it/s]\n",
+      "100%|██████████| 45/45 [00:00<00:00, 932.43it/s]\n"
      ]
     }
    ],
@@ -1976,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
