--- a/Jaekyun/Investment_Performance.ipynb
+++ b/Jaekyun/Investment_Performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +53,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'pricingDate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'pricingDate'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/Investment_Performance.ipynb 셀 7\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/Investment_Performance.ipynb#W5sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m end_date \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m2023-04-30\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/Investment_Performance.ipynb#W5sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39m# 데이터 전처리: 날짜 필터링 및 필요한 종목만 선택\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/Investment_Performance.ipynb#W5sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m new_market[\u001b[39m'\u001b[39m\u001b[39mpricingDate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_datetime(new_market[\u001b[39m'\u001b[39m\u001b[39mpricingDate\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/Investment_Performance.ipynb#W5sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m filtered_data \u001b[39m=\u001b[39m new_market[(new_market[\u001b[39m'\u001b[39m\u001b[39mpricingDate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m start_date) \u001b[39m&\u001b[39m (new_market[\u001b[39m'\u001b[39m\u001b[39mpricingDate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m end_date)]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Jaekyun/Investment_Performance.ipynb#W5sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m selected_data \u001b[39m=\u001b[39m filtered_data[[\u001b[39m'\u001b[39m\u001b[39mpricingDate\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m+\u001b[39m \u001b[39mlist\u001b[39m(stocks_15\u001b[39m.\u001b[39mkeys())]\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mget_loc(key)\n\u001b[1;32m   3808\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'pricingDate'"
+     ]
+    }
+   ],
    "source": [
     "# GPT-weighted_15 주간수익률\n",
     "\n",
@@ -97,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1308,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1353,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1398,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1443,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1489,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1472,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1534,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1581,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1628,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1650,7 @@
        "<Axes: title={'center': 'Weekly Returns'}, xlabel='pricingDate'>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1637,14 +1666,13 @@
     }
    ],
    "source": [
-    "# \n",
     "weekly_returns_insample = (1 + weekly_returns_insample).cumprod()\n",
     "weekly_returns_insample.plot(figsize=(12, 8), title='Weekly Returns', fontsize=12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1681,7 @@
        "<Axes: title={'center': 'Log Returns'}, xlabel='pricingDate'>"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1675,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2111,7 @@
        "23      1.521309  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
