--- a/S&P code/ChatGPT-4_API.ipynb
+++ b/S&P code/ChatGPT-4_API.ipynb
@@ -2,19 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: openai in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (1.3.6)\n",
+      "Requirement already satisfied: anyio<4,>=3.5.0 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from openai) (3.5.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from openai) (1.8.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from openai) (0.25.2)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from openai) (1.10.12)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from openai) (1.2.0)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from openai) (4.65.0)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.5 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from openai) (4.7.1)\n",
+      "Requirement already satisfied: idna>=2.8 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from anyio<4,>=3.5.0->openai) (3.4)\n",
+      "Requirement already satisfied: certifi in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (2023.7.22)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (1.0.2)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n",
+      "Requirement already satisfied: pandas in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (1.5.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from pandas) (2022.7)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from pandas) (1.24.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install OpenAI\n",
+    "!pip install openai\n",
+    "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Yoojiyoung\\OneDrive - 경희대학교\\문서\\GitHub\\SNPQuantTeam01\\S&P code\\ChatGPT-4_API.ipynb Cell 2\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/S%26P%20code/ChatGPT-4_API.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mopenai\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/S%26P%20code/ChatGPT-4_API.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mopenai\u001b[39;00m \u001b[39mimport\u001b[39;00m OpenAI\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/S%26P%20code/ChatGPT-4_API.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import openai\n",
     "from openai import OpenAI\n",
-    "\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.8"
   },
   "orig_nbformat": 4
  },
